# simd-traversal

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: byte_scanner.rs
src/: avx2.rs  blocks.rs  lib.rs  neon.rs  sse.rs  x86.rs
tests/: semantics.rs
