[package]
name = "simd-traverse"
version = "0.1.0"
edition = "2024"
description = "A small traversal toolkit for byte-oriented SIMD scanners and parsers"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/simd-traverse"
repository = "https://github.com/idknerdyshit/simd-traversal"
keywords = ["simd", "bytes", "parsing", "search", "iteration"]
categories = ["algorithms", "parsing"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_panics_doc = "warn"
undocumented_unsafe_blocks = "warn"

[dependencies]
